2013-12-08 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
	* fix MO orbitals output (some virtual orbitals may have negative energy)

2013-07-28 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
	* update alam to handle high diffuse basis (spd ---> spdghi)

2013-07-20 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
	* fix exchange kernel bugs
 	* finish BFsca suite

2013-07-02 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
	* rewrite config file to setup bfsca package

2013-07-01 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
	* change autoconf/automake to cmake

2013-06-28 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
	* rename lavib to bfsca
	* rewrite all run scripts

2013-06-01 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
	* modify GAMESS 2013 to calculate BTAD/DSG potential (rewrite)

2008-06-23 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* modify all scripts to deal with DSGH/BTADH polarization
	potentials

2008-04-08 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* modify configure.ac to adjust the order of FORTRAN compiler

2008-04-05 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* add sumxsc.s to sum up xsc's of different symmetries

2008-04-02 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* add tot_xsc.s to output integral/momtum xsc through abcvdcs

2007-11-13 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* fix some minor bugs in accordance with Fortran 95 standard

2006-06-24 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* add a subroutine gauleg to generate gauss-legendre abscissas and
	weights with any dimension

2006-06-22 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* modify lavib.f so that input potential, exchange and LA mesh
	could be different
	* trapezoidal integrals give the same results as the original code

2006-06-13 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* rewrite all subroutines of LA calculation with fast
	Gauss-Legendre integral in lavib.f so that lavib could work with
	e-N2 vibrational scattering

2006-05-27 Hao Feng (RDS) <fenghao@scu.edu.cn>
	* add a judgement to ensure the convergence of exchange kernel in
	vibker.f/lavib.f